--- a/s-front/s-front/src/start.css
+++ b/s-front/s-front/src/start.css
@@ -102,7 +102,6 @@ html, body {
     overflow: auto; /* Убедитесь, что основной контент может прокручиваться */
 }
 
-/* Контейнер для текста */
 .news-container {
     background-color: rgba(0, 0, 0, 0.7);
     color: #e3dbdbc1;
@@ -117,15 +116,19 @@ html, body {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     word-wrap: break-word;  
 }
-  
-.news-title {
-    font-size: 22px;
-    margin-bottom: 10px;
-    color: #e0e0e0;
+
+.news-item {
+    margin: 20px 0; /* Отступы между новостями */
 }
-  
-.news-text {
-    font-size: 16px;
+
+.news-subtitle {
+    font-size: 20px;
+    color: #e0e0e0;
+    margin: 10px 0; /* Отступы для заголовка новости */
+}
+
+.news-sender {
+    font-size: 14px;
     color: #e3dbdbc1;
-    border-radius: 20px;
+    margin: 5px 0; /* Отступы для имени отправителя */
 }
